--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bgg-xml-api-client": "^0.1.8",
+    "node-xml-to-js": "^1.0.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -15,6 +16,8 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2",
+    "xml-js": "^1.6.11",
+    "xml-to-json": "^0.1.1",
     "xml2js": "^0.4.23"
   },
   "scripts": {
