--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-input-range": "^1.3.0",
     "react-native-xml2js": "^1.0.3",
     "react-router-dom": "^5.1.0",
     "react-scripts": "4.0.3",
