--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "bgg-xml-api-client": "^0.1.8",
     "node-xml-to-js": "^1.0.5",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-input-range": "^1.3.0",
     "react-native-xml2js": "^1.0.3",
     "react-router-dom": "^5.1.0",
     "react-scripts": "4.0.3",
+    "react-sliding-pane": "^7.3.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2",
     "xml-js": "^1.6.11",
