Hopefully seting a proper app icon and name for android and other devices.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Lhotka Game Night",
+  "name": "Lhotka Game Night",
   "icons": [
     {
       "src": "favicon.ico",
